Create SQL Console
Also fix bugs + beautify